Added pages and fixed onboarding screens

--- a/ACE/ACE.csproj
+++ b/ACE/ACE.csproj
@@ -47,9 +47,9 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Language.cs" />
-    <Compile Include="PrivacyPolicy.cs" />
     <Compile Include="PrivacyPolicyEN.cs" />
     <Compile Include="PrivacyPolicyFR.cs" />
+    <Compile Include="Search.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -66,10 +66,10 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
     <AndroidResource Include="Resources\layout\Language.axml" />
     <AndroidResource Include="Resources\values\Colours.xml" />
-    <AndroidResource Include="Resources\layout\PrivacyPolicy.axml" />
     <AndroidResource Include="Resources\layout\PrivacyPolicyEN.axml" />
     <AndroidResource Include="Resources\layout\PrivacyPolicyFR.axml" />
     <AndroidResource Include="Resources\drawable\CanadaFooter.png" />
+    <AndroidResource Include="Resources\layout\Search.axml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
