--- a/ACE/app/src/main/AndroidManifest.xml
+++ b/ACE/app/src/main/AndroidManifest.xml
@@ -8,12 +8,13 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.AppCompat.Light">
+            android:theme="@style/Theme.AppCompat.Light.ActionBar">
 
 
 
         <activity android:name=".MainActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:theme="@style/MyTheme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"></action>
                 <category android:name="android.intent.category.LAUNCHER"></category>
@@ -21,7 +22,8 @@
         </activity>
 
         <activity android:name=".searchPage"
-                  android:label="@string/Search">
+                  android:label="@string/Search"
+                  android:theme="@style/Theme.AppCompat.Light.ActionBar">
         </activity>
     </application>
 
