--- a/ACE/app/src/main/AndroidManifest.xml
+++ b/ACE/app/src/main/AndroidManifest.xml
@@ -23,7 +23,12 @@
 
         <activity android:name=".searchPage"
                   android:label="@string/Search"
-                  android:theme="@style/Theme.AppCompat.Light.ActionBar">
+                  android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        </activity>
+
+        <activity android:name=".SearchResultsPage"
+                  android:label="@string/Search"
+                  android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
 
         <activity android:name=".LanguagePage"
@@ -43,7 +48,7 @@
 
         <activity android:name=".SettingsPage"
                   android:label="@string/Settings"
-                  android:theme="@style/Theme.AppCompat.Light.ActionBar">
+                  android:theme="@style/MyTheme.Splash">
         </activity>
 
 
