--- a/ACE/app/src/main/AndroidManifest.xml
+++ b/ACE/app/src/main/AndroidManifest.xml
@@ -12,15 +12,6 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.Light.ActionBar">
         <activity
-                android:name=".thisisatestriley"
-                android:label="@string/title_activity_thisisatestriley">
-        </activity>
-        <activity
-                android:name=".test"
-                android:label="@string/title_activity_test"
-                android:theme="@style/Theme.AppCompat.Light.ActionBar.NoActionBar">
-        </activity>
-        <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
                 android:theme="@style/MyTheme.Splash">
@@ -41,18 +32,8 @@
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity
-                android:name=".LanguagePage"
-                android:label="@string/Language"
-                android:theme="@style/Theme.AppCompat.Light.ActionBar">
-        </activity>
-        <activity
                 android:name=".PrivacyPolicyEN"
                 android:label="@string/PrivacyPolicyEN"
-                android:theme="@style/Theme.AppCompat.Light.ActionBar">
-        </activity>
-        <activity
-                android:name=".PrivacyPolicyFR"
-                android:label="@string/PrivacyPolicyFR"
                 android:theme="@style/Theme.AppCompat.Light.ActionBar">
         </activity>
         <activity
@@ -63,6 +44,11 @@
         <activity
                 android:name=".ImageViewPage"
                 android:label="@string/CarDetail"
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        </activity>
+        <activity
+                android:name=".AddHotspotPage"
+                android:label="@string/AddHotspot"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
     </application>
