--- a/ACE/app/src/main/AndroidManifest.xml
+++ b/ACE/app/src/main/AndroidManifest.xml
@@ -13,6 +13,17 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.Light.ActionBar">
+
+        <provider
+                android:name="android.support.v4.content.FileProvider"
+                android:authorities="com.example.android.fileprovider"
+                android:exported="false"
+                android:grantUriPermissions="true">
+            <meta-data
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/file_paths"></meta-data>
+        </provider>
+
         <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
@@ -47,7 +58,7 @@
                 android:name=".ImageViewPage"
                 android:label="@string/CarDetail"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-                android:parentActivityName="com.cbsa.riley.ace.searchPage" >>
+                android:parentActivityName="com.cbsa.riley.ace.searchPage" >
         </activity>
         <activity
                 android:name=".AddHotspotPage"
@@ -56,6 +67,11 @@
         </activity>
         <activity
                 android:name=".HotspotDetails"
+                android:label="@string/HotspotDetails"
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        </activity>
+        <activity
+                android:name=".ViewHotspotDetails"
                 android:label="@string/HotspotDetails"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
