--- a/ACE/app/build.gradle
+++ b/ACE/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
     implementation "com.squareup.retrofit2:converter-gson:2.5.0"
     implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation "com.github.chrisbanes:PhotoView:2.0.0"
 
 
 }
