French button and multiple add picture buttons
the french button makes the login screen french.
you can add multiple pictures to the hotspot detail page but they aren't POSTing yet

--- a/ACE/app/src/main/AndroidManifest.xml
+++ b/ACE/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         </activity>
         <activity
                 android:name=".PrivacyPolicyEN"
-                android:label="@string/PrivacyPolicyEN"
+                android:label="@string/PrivacyPolicy"
                 android:theme="@style/Theme.AppCompat.Light.ActionBar">
         </activity>
         <activity
