--- a/ADMIN/client/package.json
+++ b/ADMIN/client/package.json
@@ -4,14 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "match-sorter": "^2.3.0",
     "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.5",
-    "react-bootstrap-table-next": "^2.1.2",
-    "react-bootstrap-table2-filter": "^1.1.4",
-    "react-bootstrap-table2-paginator": "^2.0.3",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.0",
-    "react-scripts": "2.1.5",
+    "react-scripts": "^2.1.8",
+    "react-table": "^6.9.2",
     "react-tabs-redux": "^4.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
