--- a/ACE/app/src/main/AndroidManifest.xml
+++ b/ACE/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.cbsa.riley.ace">
+          package="com.cbsa.mcoe.ace">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -18,7 +18,7 @@
 
         <provider
                 android:name="android.support.v4.content.FileProvider"
-                android:authorities="com.cbsa.riley.ace.fileprovider"
+                android:authorities="com.cbsa.mcoe.ace.fileprovider"
                 android:exported="false"
                 android:grantUriPermissions="true">
             <meta-data
@@ -27,7 +27,7 @@
         </provider>
 
         <activity
-                android:name=".MainActivity"
+                android:name="com.cbsa.mcoe.ace.MainActivity"
                 android:label="@string/app_name"
                 android:theme="@style/MyTheme.Splash">
             <intent-filter>
@@ -37,59 +37,59 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".PrivacyPolicyEN"
+                android:name="com.cbsa.mcoe.ace.PrivacyPolicyEN"
                 android:label="@string/PrivacyPolicy"
                 android:theme="@style/Theme.AppCompat.Light.ActionBar">
         </activity>
         <activity
-                android:name=".SettingsPage"
+                android:name="com.cbsa.mcoe.ace.SettingsPage"
                 android:label="@string/Settings"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity
-                android:name=".ImageViewPage"
+                android:name="com.cbsa.mcoe.ace.ImageViewPage"
                 android:label="@string/CarDetail"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-                android:parentActivityName="com.cbsa.riley.ace.SearchPage" >
+                android:parentActivityName="com.cbsa.mcoe.ace.SearchPage" >
         </activity>
         <activity
-                android:name=".AddHotspotPage"
+                android:name="com.cbsa.mcoe.ace.AddHotspotPage"
                 android:label="@string/AddHotspot"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity
-                android:name=".HotspotDetails"
+                android:name="com.cbsa.mcoe.ace.HotspotDetails"
                 android:label="@string/HotspotDetails"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity
-                android:name=".ViewHotspotDetails"
+                android:name="com.cbsa.mcoe.ace.ViewHotspotDetails"
                 android:label="@string/HotspotDetails"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity
-                android:name=".ListViewPage"
+                android:name="com.cbsa.mcoe.ace.ListViewPage"
                 android:label="@string/ListView"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity
-                android:name=".SearchResultsPage"
+                android:name="com.cbsa.mcoe.ace.SearchResultsPage"
                 android:label="@string/Search"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         >
         </activity>
         <activity
-                android:name=".SearchPage"
+                android:name="com.cbsa.mcoe.ace.SearchPage"
                 android:label="@string/Search"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity
-                android:name=".ImageFullscreen"
+                android:name="com.cbsa.mcoe.ace.ImageFullscreen"
                 android:label="@string/Search"
                 android:theme="@style/Theme.AppCompat.Light.NoStatusBar">
         </activity>
         <activity
-                android:name=".LoginPage"
+                android:name="com.cbsa.mcoe.ace.LoginPage"
                 android:label="@string/Login"
                 android:theme="@style/Theme.AppCompat.Light.NoStatusBar.Login">
         </activity>
