--- a/ACE/app/build.gradle
+++ b/ACE/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.cbsa.riley.ace"
+        applicationId "com.cbsa.mcoe.ace"
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
