--- a/ACE/app/src/main/AndroidManifest.xml
+++ b/ACE/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         </provider>
 
         <activity
-                android:name="com.cbsa.mcoe.ace.MainActivity"
+                android:name="com.cbsa.mcoe.ace.activities.MainActivity"
                 android:label="@string/app_name"
                 android:theme="@style/MyTheme.Splash">
             <intent-filter>
@@ -37,59 +37,59 @@
             </intent-filter>
         </activity>
         <activity
-                android:name="com.cbsa.mcoe.ace.PrivacyPolicyEN"
+                android:name="com.cbsa.mcoe.ace.unused_activites.PrivacyPolicyEN"
                 android:label="@string/PrivacyPolicy"
                 android:theme="@style/Theme.AppCompat.Light.ActionBar">
         </activity>
         <activity
-                android:name="com.cbsa.mcoe.ace.SettingsPage"
+                android:name="com.cbsa.mcoe.ace.activities.SettingsPage"
                 android:label="@string/Settings"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity
-                android:name="com.cbsa.mcoe.ace.ImageViewPage"
+                android:name="com.cbsa.mcoe.ace.activities.ImageViewPage"
                 android:label="@string/CarDetail"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-                android:parentActivityName="com.cbsa.mcoe.ace.SearchPage" >
+                android:parentActivityName="com.cbsa.mcoe.ace.activities.SearchPage" >
         </activity>
         <activity
-                android:name="com.cbsa.mcoe.ace.AddHotspotPage"
+                android:name="com.cbsa.mcoe.ace.activities.AddHotspotPage"
                 android:label="@string/AddHotspot"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity
-                android:name="com.cbsa.mcoe.ace.HotspotDetails"
+                android:name="com.cbsa.mcoe.ace.activities.HotspotDetails"
                 android:label="@string/HotspotDetails"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity
-                android:name="com.cbsa.mcoe.ace.ViewHotspotDetails"
+                android:name="com.cbsa.mcoe.ace.activities.ViewHotspotDetails"
                 android:label="@string/HotspotDetails"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity
-                android:name="com.cbsa.mcoe.ace.ListViewPage"
+                android:name="com.cbsa.mcoe.ace.activities.ListViewPage"
                 android:label="@string/ListView"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity
-                android:name="com.cbsa.mcoe.ace.SearchResultsPage"
+                android:name="com.cbsa.mcoe.ace.activities.SearchResultsPage"
                 android:label="@string/Search"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         >
         </activity>
         <activity
-                android:name="com.cbsa.mcoe.ace.SearchPage"
+                android:name="com.cbsa.mcoe.ace.activities.SearchPage"
                 android:label="@string/Search"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity
-                android:name="com.cbsa.mcoe.ace.ImageFullscreen"
+                android:name="com.cbsa.mcoe.ace.activities.ImageFullscreen"
                 android:label="@string/Search"
                 android:theme="@style/Theme.AppCompat.Light.NoStatusBar">
         </activity>
         <activity
-                android:name="com.cbsa.mcoe.ace.LoginPage"
+                android:name="com.cbsa.mcoe.ace.unused_activites.LoginPage"
                 android:label="@string/Login"
                 android:theme="@style/Theme.AppCompat.Light.NoStatusBar.Login">
         </activity>
